--- a/editar_producto.html
+++ b/editar_producto.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet"
         crossorigin="anonymous">
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Gaia Holística</title>
 </head>
@@ -53,39 +53,31 @@
 
         <div class="booking">
 
-            <div id="app" class="formContent">
+            <div id="app" class="formAddingContent">
 
 
-                <form action="#" class="formAdding">
+                <form action="#" class="formAdding col-8">
 
-                    <div class="row mb-3">
-                        <label for="id" class="col-4 col-form-label">id</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="id" disabled v-model="id">
-                        </div>                    
-                    <div class="row mb-3">
-                        <label for="nombre" class="col-4 col-form-label">Nombre</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="nombre" v-model="nombre">
-                        </div>
+
+                    <div class="mb-3">
+                        <label for="id" class="form-label">ID</label>
+                        <input type="number" class="form-control" id="ID" v-model="id">
                     </div>
-                    <div class="row mb-3">
-                        <label for="precio" class="col-4 col-form-label">Precio</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="precio" v-model="precio">
-                        </div>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombre" v-model="nombre">
                     </div>
-                    <div class="row mb-3">
-                        <label for="stock" class="col-4 col-form-label">Stock</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="stock" v-model="stock">
-                        </div>
+                    <div class="mb-3">
+                        <label for="Precio" class="form-label">Precio</label>
+                        <input type="number" class="form-control" id="Precio" v-model="precio">
                     </div>
-                    <div class="row mb-3">
-                        <label for="imagen" class="col-4 col-form-label">Imagen</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="imagen" v-model="imagen">
-                        </div>
+                    <div class="mb-3">
+                        <label for="stock" class="form-label">Stock</label>
+                        <input type="text" class="form-control" id="stock" v-model="stock">
+                    </div>
+                    <div class="mb-3">
+                        <label for="imagen" class="form-label">URL Imagen</label>
+                        <input type="text" class="form-control" id="imagen" v-model="imagen">
                     </div>
                     <button type="button" class="btn btn-success" v-on:click="modificar()">Grabar</button>
                 </form>
@@ -102,8 +94,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <script src="./js/inventario.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./js/editar_producto.js"></script>
 </body>
 
 </html>
