--- a/inventario.html
+++ b/inventario.html
@@ -89,7 +89,7 @@
                                         <td>{{producto.stock}}</td>
                                         <td><img width="60" :src="producto.imagen" :alt="producto.nombre"></td>
                                         <td>
-                                            <a class="btn btn-sm btn-warning" :href="'editar_producto.html?id='+ producto.id">Editar</a>
+                                            <a class="btn btn-sm btn-warning me-1" :href="'editar_producto.html?id='+ producto.id">Editar</a>
                                             <button type="button" class="btn btn-sm btn-danger" v-on:click="eliminar(producto.id)">Eliminar</button>
                                         </td>
                                     </tr>
